
== 1.6 ==
  * Add more bin scripts to install (#569)
  * portal_enable_abac controls all use of ABAC - so all disabled now (#556)
  * update_user_certs script updates the ma_outside_cert table for DB transition (#564)
  * Add missing copyright (#576)
  * Change member IDs when importing to new DB. And make a file of emails of people who had outside certs. (#577)

== 1.5 ==
  * Fix error return on renewslice error in pgch (for omni/Flack) (#555)
  * Remove some hardcoded URNs (progress on #10)
  * Clean up page to accept project invitations (#530)
  * Sign experimenter data message to GEMINI (#560)
  * Remove use of /bin/hostname in scripts & code (#354)
  * Fix a DB authentication bug in geni-add-trusted-tool (#505)
  * Clean up make install to avoid ~ and # files (#488)
  * Install operator scripts in /usr/local/bin on portals (#499)
  * Add `authority` field to omni-bundle and template omni_config (#551)
  * Update certificate creation instructions to match omni-configure (#552)
  * Make omni-bundle download be the same regardless of the number of projects (#566)
  * Clarify wording on user cert generation page (#567)
  * Implement 'sundown' mode that forces slices to expire by a
  configured date (i.e. June 17, 2013) (#548)
  * Implement 'lockdown' mode that makes most operations read-only, to
  be enabled around June 5, 2013. (#547)

== 1.4 ==
  * Check for valid arguments in more spots (#5)
  * Ensure more methods have guards, and log on failed authorization (#501)
  * Added sbin/renew-certs script to renew service certificates (#507)
  * Add support for GetVersion in pgch (#492)
  * Add a revoke privilege script (#549)
  * Fix up revoking project lead and operator privileges (#550)
  * Bug fix for changing project leads (#512)
  * Fix Changing Slice leads (#537)
  * Quiet debug printouts (#531)
  * Enable preliminary support for data handoff to GEMINI (#503)
  * GENI IdP login formats strange on GEC16 tutorial VM (#452)